Always show scrollbar to avoid jumping

--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
     .swagger-section #header {
       background-color: #0a5f7f;
     }
+    html {
+      overflow-y: scroll;
+    }
   </style>
 </head>
 
