--- a/src/main/resources/swagger/index.html
+++ b/src/main/resources/swagger/index.html
@@ -34,7 +34,7 @@
       if (url && url.length > 1) {
         url = decodeURIComponent(url[1]);
       } else {
-        url = "http://petstore.swagger.io/v2/swagger.json";
+        url = window.location.toString().replace("docs", "api-docs");
       }
 
       // Pre load translate...
@@ -78,7 +78,7 @@
       });
 
       function addApiKeyAuthorization(){
-        var key = encodeURIComponent($('#input_apiKey')[0].value);
+        var key = encodeURIComponent($('#input_accessToken')[0].value);
         if(key && key.trim() != "") {
             var apiKeyAuth = new SwaggerClient.ApiKeyAuthorization("api_key", key, "query");
             window.swaggerUi.api.clientAuthorizations.add("api_key", apiKeyAuth);
@@ -86,12 +86,33 @@
         }
       }
 
-      $('#input_apiKey').change(addApiKeyAuthorization);
+      /* DIL added as before in dropwizard-swagger */
+      function addAuthorizationHeader() {
+        var key = $('#input_authHeader')[0].value;
+        if(key && key.trim() != "") {
+            var headerAuth = new SwaggerClient.ApiKeyAuthorization("Authorization", key, "header");
+            window.swaggerUi.api.clientAuthorizations.add("Custom Authorization", headerAuth);
+            log("added key " + key);
+        }
+      }
+      /* end DIL */
+
+      $('#input_accessToken').change(addApiKeyAuthorization);
+
+      /* DIL added as before in dropwizard-swagger */
+      $('#input_authHeader').change(addAuthorizationHeader);
+      $('#input_headerSelect').change(function() {
+        var toShow = $( this ).val();
+        $('#header_'+toShow).show();
+        var toHide = (Number(toShow)+1)%2;
+        $('#header_'+toHide).hide();
+      });
+      /* end DIL */
 
       // if you have an apiKey you would like to pre-populate on the page for demonstration purposes...
       /*
         var apiKey = "myApiKeyXXXX123456789";
-        $('#input_apiKey').val(apiKey);
+        $('#input_accessToken').val(apiKey);
       */
 
       window.swaggerUi.load();
@@ -107,14 +128,20 @@
 
 <body class="swagger-section">
 <div id='header'>
-  <div class="swagger-ui-wrap">
-    <img src="images/logo.png"/>
-    <form id='api_selector'>
-      <div class='input'><input placeholder="http://example.com/api" id="input_baseUrl" name="baseUrl" type="text"/></div>
-      <div class='input'><input placeholder="api_key" id="input_apiKey" name="apiKey" type="text"/></div>
-      <div class='input'><a id="explore" href="#" data-sw-translate>Explore</a></div>
-    </form>
-  </div>
+    <div class="swagger-ui-wrap">
+      <img src="images/logo.png" alt="leanIX"/>
+        <form id='api_selector'>
+            <div class='input'>
+                <input placeholder="http://example.com/api" id="input_baseUrl" name="baseUrl" type="text"/>
+            </div>
+            <div class='input' id="header_0">
+                <input placeholder="Access Token" id="input_accessToken" name="accessToken" type="text"/>
+            </div>
+            <div class='input'>
+                <a id="explore" href="#" data-sw-translate>Explore</a>
+            </div>
+        </form>
+    </div>
 </div>
 
 <div id="message-bar" class="swagger-ui-wrap" data-sw-translate>&nbsp;</div>
