--- a/src/main/resources/swagger/index.html
+++ b/src/main/resources/swagger/index.html
@@ -49,7 +49,7 @@
           if(typeof initOAuth == "function") {
             initOAuth({
               clientId: "your-client-id",
-              clientSecret: "your-client-secret-if-required",
+              clientSecret: "your-client-secret",
               realm: "your-realms",
               appName: "your-app-name", 
               scopeSeparator: ",",
@@ -81,7 +81,7 @@
         var token = $('#input_accessToken')[0].value;
         if(token && token.trim() != "") {
             var accessTokenAuth = new SwaggerClient.ApiKeyAuthorization("Authorization", "Bearer " + token, "header");
-            window.swaggerUi.api.clientAuthorizations.add("oauth", accessTokenAuth);
+            window.swaggerUi.api.clientAuthorizations.add("token", accessTokenAuth);
             log("added Authorization " + token);
         }
       }
@@ -97,14 +97,6 @@
       }
   });
   </script>
-  <style>
-    .auth {
-      display: none;
-    }
-    .access {
-      display: none;
-    }
-  </style>
 </head>
 
 <body class="swagger-section">
