--- a/src/main/resources/swagger/index.html
+++ b/src/main/resources/swagger/index.html
@@ -83,13 +83,64 @@
         defaultModelRendering: 'schema',
         showRequestHeaders: false
       });
-      
+
+      function getHostname(url) {
+          var m = url.match(/^https?:\/\/[^/]+/);
+          return m ? m[0] : null;
+      }
+
+      var PersonalAccessTokenAuthorization = function() {
+        this.lastRefresh = new Date();
+      };
+
+      PersonalAccessTokenAuthorization.prototype.apply = function(obj) {
+        var hostName =  getHostname($("#input_baseUrl").val());
+        var targetURL = hostName + '/services/mtm/v1/oauth2/token';
+        var authHeader = 'Basic ' + btoa('PersonalAccessToken:' + $('#input_accessToken').val());
+
+        var requestFinished = false;
+        var accessToken;
+
+        // Refresh token only once per second
+        if (!this.accessToken || ((new Date() - this.lastRefresh) > 1000))
+        {
+          $.ajax({
+            async: false,
+            url: targetURL,
+            type: 'POST',
+            data: {
+              grant_type: 'client_credentials'
+            },
+            headers: {
+              'Authorization': authHeader
+            }
+          }).done(function (data) {
+            accessToken = data['access_token'];
+            requestFinished = true;
+          })
+          .fail(function () {
+            requestFinished = true;
+            alert("Invalid API Token");
+          });
+
+          while(!requestFinished) {
+            ;
+          }
+
+          this.accessToken = accessToken;
+          this.lastRefresh = new Date();
+        }
+
+        obj.headers["Authorization"] = 'Bearer ' + this.accessToken;
+
+        return true;
+      };
+
       function addAuthorizationHeader() {
         var token = $('#input_accessToken')[0].value;
         if(token && token.trim() != "") {
-            var accessTokenAuth = new SwaggerClient.ApiKeyAuthorization("Authorization", "Bearer " + token, "header");
-            window.swaggerUi.api.clientAuthorizations.add("token", accessTokenAuth);
-            log("added Authorization " + token);
+            var patAuth = new PersonalAccessTokenAuthorization();
+            window.swaggerUi.api.clientAuthorizations.add("token", patAuth);
         }
       }
 
@@ -115,7 +166,7 @@
                 <input placeholder="http://example.com/api" id="input_baseUrl" name="baseUrl" type="text"/>
             </div>
             <div class='input' id="header_0">
-                <input placeholder="Access Token" id="input_accessToken" name="accessToken" type="text"/>
+                <input placeholder="API Token" id="input_accessToken" name="accessToken" type="text"/>
             </div>
             <div class='input'>
                 <a id="explore" href="#" data-sw-translate>Explore</a>
