--- a/src/main/resources/swagger/index.html
+++ b/src/main/resources/swagger/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <title>LeanIX API documentation</title>
   <link rel="icon" type="image/png" href="images/favicon.ico" />
-  <link href='css/typography.css' media='screen' rel='stylesheet' type='text/css'/>
-  <link href='css/reset.css' media='screen' rel='stylesheet' type='text/css'/>
-  <link href='css/screen.css' media='screen' rel='stylesheet' type='text/css'/>
-  <link href='css/reset.css' media='print' rel='stylesheet' type='text/css'/>
-  <link href='css/print.css' media='print' rel='stylesheet' type='text/css'/>
+  <link href='css/typography.css?v1' media='screen' rel='stylesheet' type='text/css'/>
+  <link href='css/reset.css?v1' media='screen' rel='stylesheet' type='text/css'/>
+  <link href='css/screen.css?v1' media='screen' rel='stylesheet' type='text/css'/>
+  <link href='css/reset.css?v1' media='print' rel='stylesheet' type='text/css'/>
+  <link href='css/print.css?v1' media='print' rel='stylesheet' type='text/css'/>
   <script src='lib/jquery-1.8.0.min.js' type='text/javascript'></script>
   <script src='lib/jquery.slideto.min.js' type='text/javascript'></script>
   <script src='lib/jquery.wiggle.min.js' type='text/javascript'></script>
@@ -34,7 +34,7 @@
 
       // For local testing: Hardcode URL
       if(window.location.hostname === 'localhost') {
-        url = 'https://local-eam.leanix.net/services/metrics/v1/api-docs/';
+        url = 'https://app.leanix.net/services/pathfinder/v1/api-docs/';
       }
       else {
         if (url && url.length > 1) {
@@ -158,7 +158,7 @@
 <body class="swagger-section">
 <div id='header'>
     <div class="swagger-ui-wrap">
-      <a href="https://dev.leanix.net" target="_blank"><img src="images/logo.png" alt="LeanIX" height="25px"/></a>
+      <a href="https://dev.leanix.net" target="_blank"><img src="images/logo.svg" alt="LeanIX"/></a>
         <form id='api_selector'>
             <div class='input'>
                 <input placeholder="http://example.com/api" id="input_baseUrl" name="baseUrl" type="text"/>
